# cpp_indie_studio

./: .gitignore  CMakeLists.txt  Makefile  main.cpp
media/map/: map_indie.mtl
media/models/box/: ItmBox00.dae  ItmBox00.mtl
media/models/fire/: WpnMetaridleyFireballL.dae  WpnMetaridleyFireballS.dae  WpnMetaridleyFireballS.mtl
media/models/pommy/: Thumbs.db  pommy.blend  pommy.mtl  pommyV2.mtl
media/models/red_pommy/: pommyV3.mtl
media/models/speedup/: speed_up_power_up.mtl
src/: main.cpp
src/Boxes/: Box.cpp  Box.hpp
src/Core/: Core.cpp  Core.hpp
src/Graphic/: CollisionsHandler.cpp  CollisionsHandler.hpp  CustomEventReceiver.cpp  CustomEventReceiver.hpp  CustomNode.cpp  CustomNode.hpp  Gfx.cpp  Gfx.hpp  Map.hpp  Player.cpp  Player.hpp
src/Loot/: Loot.cpp  Loot.hpp
src/Map/: IObject.hpp  Map.cpp  Map.hpp  Tile.cpp  Tile.hpp  main.cpp
src/Menu/: Menu.cpp  Menu.hpp  MenuEventReceiver.cpp  MenuEventReceiver.hpp
src/Object/: AObject.cpp  AObject.hpp
src/Object/Bomb/: Bomb.cpp  Bomb.hpp
src/Object/Boxes/: Box.cpp  Box.hpp  Loot.cpp  Loot.hpp
src/Object/Fire/: Fire.cpp  Fire.hpp
src/Object/Wall/: Wall.cpp  Wall.hpp
src/Player_AI/: AI.cpp  AI.hpp  Player.cpp  Player.hpp
src/Player_IA/: IA.cpp  IA.hpp  Player.cpp  Player.hpp
src/Sound/: SoundManager.cpp  SoundManager.hpp
